# flock-zorch

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  SPARTAN_REUSE.md  requirements.in  requirements_lock_3_11.txt
.cargo/: config.toml
.github/workflows/: ci.yml
artifacts/: BUILD.bazel
docs/: BENCHMARKS.md  SETUP.md
docs/superpowers/plans/: 2026-07-08-flock-zorch-iop-subdir-layout.md
docs/superpowers/specs/: 2026-07-08-flock-zorch-iop-subdir-layout-design.md
examples/: bench_blake3_cpu.rs  bench_blake3_ligerito_cpu.rs  bench_blake3_witness_cpu.rs  bench_commit_cpu.rs  bench_e2e_cpu.rs  bench_keccak3_ligerito_cpu.rs  bench_ntt_cpu.rs  bench_sha256_cpu.rs  bench_sha2_cpu.rs  bench_sha2_ligerito_cpu.rs  bench_sumcheck_cpu.rs  dump_basefold.rs  dump_blake3.rs  dump_blake3_ligerito.rs  dump_chain_shift.rs  dump_challenger.rs  dump_commit.rs  dump_e2e.rs  dump_e2e_ligerito.rs  dump_field_mul.rs  dump_fri_fold.rs  dump_gf8_urm.rs  dump_keccak.rs  dump_keccak3_ligerito.rs  dump_keccak_chain.rs  dump_keccak_ligerito.rs  dump_ligerito.rs  dump_lincheck.rs  dump_merkle.rs  dump_merkle_multi.rs  dump_ntt.rs  dump_pcs_open.rs  dump_ring_switch.rs  dump_row_batch.rs  dump_sha2.rs  dump_sha256.rs  dump_sha2_ligerito.rs  dump_sumcheck.rs  dump_zerocheck.rs  gen_blake3_witness_stream.rs
optim/additive_ntt/: README.md  binius_kernel_timing.patch
optim/clmad/: .gitignore  README.md  build_ffi.sh  cuda_run.py  ffi_test.py  ghash_mul.ptx  ghash_mul_ffi.cpp  validate.py
optim/merkle_ffi/: merkle_ffi.rs
python/: BUILD.bazel  pyproject.toml
python/flock_zorch/: __init__.py  _csc_fold.py  _gf8_device.py  _hostfield.py  _merkle_host_ffi.py  _zerocheck_fold.py  basefold.py  chain.py  challenger.py  field.py  field_clmad.py  field_ops.py  fri.py  fs.py  gf8.py  ghash.py  keccak3_lincheck.py  keccak_lincheck.py  ligerito.py  lincheck.py  merkle.py  ntt.py  pcs.py  pcs_commit.py  pcs_open.py  prover.py  ring_switch.py  sha256.py  sumcheck.py  verifier.py  zerocheck.py  zorch_basefold.py  zorch_ligerito.py  zorch_ligero.py
python/flock_zorch/field/: __init__.py  _gf8_device.py  _hostfield.py  f128.py  gf8.py
python/flock_zorch/field/testing/: gf8_aes_ntt_gate.py  gf8_urm_oracle_test.py
python/flock_zorch/hash/: __init__.py  merkle.py  sha256.py
python/flock_zorch/hash/testing/: merkle_multi_oracle_test.py  merkle_openings_test.py  merkle_oracle_test.py  sha256_oracle_test.py
python/flock_zorch/lincheck/: __init__.py  _csc_fold.py  chain.py  keccak.py  keccak3.py  prover.py  verifier.py
python/flock_zorch/lincheck/testing/: chain_shift_oracle_test.py  csc_fold_test.py  lincheck_circuit_protocol_test.py  lincheck_oracle_test.py  lincheck_verify_test.py
python/flock_zorch/pcs/: __init__.py  basefold.py  commit.py  fri.py  ligerito.py  open.py  pack.py  prover.py  ring_switch.py
python/flock_zorch/pcs/testing/: basefold_oracle_test.py  basefold_verify_oracle_test.py  coding_oracle_test.py  commit_oracle_test.py  ligerito_oracle_test.py  pack_prove_fast_check.py  pack_test.py  pcs_open_oracle_test.py  pcs_seam_oracle_test.py  ring_switch_oracle_test.py  row_batch_oracle_test.py  zorch_ligerito_driver_oracle_test.py  zorch_ligerito_fs_oracle_test.py  zorch_ligerito_fs_test.py
python/flock_zorch/sumcheck/: __init__.py  eq.py  inf_product.py
python/flock_zorch/sumcheck/testing/: sumcheck_gpu_vs_cpu.py  sumcheck_oracle_test.py
python/flock_zorch/testing/: _golden.py  _util.py  additive_ntt_bench.py  basefold_oracle_test.py  basefold_verify_oracle_test.py  bench_all.py  blake3_ligerito_oracle_test.py  blake3_oracle_test.py  chain_shift_oracle_test.py  challenger_device_oracle_test.py  challenger_oracle_device_test.py  challenger_oracle_test.py  clmad_integration_test.py  coding_oracle_test.py  commit_oracle_test.py  cpu_vs_gpu.py  e2e_blake3_bench.py  e2e_blake3_ligerito_bench.py  e2e_device_oracle_test.py  e2e_fused_bench.py  e2e_gpu_bench.py  e2e_keccak3_ligerito_bench.py  e2e_ligerito_oracle_test.py  e2e_oracle_test.py  e2e_sha2_bench.py  e2e_sha2_ligerito_bench.py  field_bench.py  field_ops_test.py  field_oracle_test.py  field_test.py  fri_fold_oracle_test.py  gf8_urm_oracle_test.py  keccak3_ligerito_oracle_test.py  keccak_chain_oracle_test.py  keccak_ligerito_oracle_test.py  keccak_oracle_test.py  ligerito_oracle_test.py  lincheck_circuit_protocol_test.py  lincheck_keccak_walker_device_test.py  lincheck_oracle_test.py  (+24 more)
python/flock_zorch/zerocheck/: __init__.py  _fold.py  _urm.py  _urm_device.py  prover.py  stage.py  verifier.py
python/flock_zorch/zerocheck/testing/: gf8_urm_oracle_test.py  zerocheck_oracle_test.py  zerocheck_stage_test.py  zerocheck_verify_test.py
scripts/: dump_goldens.sh  setup.sh  zorch_pythonpath.sh
src/: lib.rs
