load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# `bazel run //:requirements` regenerates the lock from requirements.in.
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    # jax/jaxlib/jax-cuda12-* dev wheels + zk-dtypes/zkbench live on the Fractalyze
    # index, not PyPI — mirror the pip.parse extra_index_url in MODULE.bazel.
    extra_args = ["--extra-index-url=https://fractalyze.github.io/pypi/simple/"],
    requirements_txt = "requirements_lock_3_11.txt",
)

exports_files(["requirements_lock_3_11.txt"])
