[package]
name = "flock-zorch"
version = "0.1.0"
edition = "2021"
description = "GPU port of succinctlabs/flock (R1CS-over-GF(2) PIOP) via the zorch/zkx compiler stack"

[dependencies]
# The byte-compare baseline: unmodified upstream flock, pinned as the git submodule
# third_party/flock (see .gitmodules) and path-depped so its types and reference
# arithmetic ARE the oracle. flock-core is edition 2024 and inherits from flock's
# own workspace. Run `git submodule update --init` (or scripts/setup.sh) first.
flock-core = { path = "third_party/flock/crates/flock-core" }
# The SHA-256 hash R1CS circuit + witness generator (and the BaseFold `prove`
# entry) live in flock-prover; used by `dump_sha2` to produce the real-R1CS
# golden + the ingested witness/matrices for the GPU sha256 prover.
flock-prover = { path = "third_party/flock/crates/flock-prover" }

# Only for the CPU-baseline bench examples: hash leaves in parallel the way
# flock's `merkle_tree` does (rayon par_iter over `hash_leaf`), so the SHA-256
# CPU anchor is flock's honest best on this box, not a single thread.
rayon = "1.10"

# Standalone workspace root (do not get absorbed into a parent dir). The reusable
# `crates/zkx-pjrt` FFI shim is added as a member when the fused-GPU PJRT path lands.
# Exclude the vendored submodules: third_party/flock is its OWN cargo workspace, so
# flock-core/flock-prover (which use `edition.workspace = true`) must inherit from
# flock's workspace root — not get absorbed as members of this one (nested under us).
[workspace]
exclude = ["third_party"]

# Match flock's bench profile (thin LTO + single codegen unit) so the CPU NTT
# baseline in `cpu_vs_gpu.py` is flock's honest best on this hardware, not an
# under-optimized build that would inflate the GPU speedup.
[profile.release]
lto = "thin"
codegen-units = 1
