[package]
name = "flock-zorch"
version = "0.1.0"
edition = "2021"
description = "GPU port of succinctlabs/flock (R1CS-over-GF(2) PIOP) via the zorch/zkx compiler stack"

[dependencies]
# The byte-compare baseline: unmodified upstream flock, pinned by git rev so its
# types and reference arithmetic ARE the oracle. Cargo fetches it on build (no
# submodule); bumping = edit the rev. flock-core is edition 2024 — cargo caps
# lints on git deps, so its own lint config can't break our build.
flock-core = { git = "https://github.com/succinctlabs/flock.git", rev = "73f7202" }
# The SHA-256 hash R1CS circuit + witness generator (and the BaseFold `prove`
# entry) live in flock-prover; used by `dump_sha2` to produce the real-R1CS
# golden + the ingested witness/matrices for the GPU sha256 prover.
flock-prover = { git = "https://github.com/succinctlabs/flock.git", rev = "73f7202" }

# Only for the CPU-baseline bench examples: hash leaves in parallel the way
# flock's `merkle_tree` does (rayon par_iter over `hash_leaf`), so the SHA-256
# CPU anchor is flock's honest best on this box, not a single thread.
rayon = "1.10"

# Match flock's bench profile (thin LTO + single codegen unit) so the CPU NTT
# baseline in `cpu_vs_gpu.py` is flock's honest best on this hardware, not an
# under-optimized build that would inflate the GPU speedup.
[profile.release]
lto = "thin"
codegen-units = 1
