"""flock-zorch — a GPU flock prover built on zorch's scheme-agnostic blocks.

bzlmod module (bazel 9 dropped WORKSPACE). Mirrors the sp1-zorch / whir-zorch
shape: a thin consumer repo that depends on fractalyze/zorch for the
scheme-agnostic SNARK spine (SHA-256 Fiat-Shamir duplex, byte-SHA-256, Merkle
commitment, sumcheck fold primitives, poly/eq, pcs fold/basefold skeleton) and
adds ONLY the flock-specific pieces: the GHASH-basis GF(2^128) field (+ clmad
FFI), the additive NTT over the φ8 basis, the F8 round-1 univariate skip, and
the prove_packed / lincheck / open / proof assembly. Nothing flock-specific
belongs in zorch — it lives here.

Byte-identity to unmodified succinct flock is the non-negotiable gate; the
golden fixtures are dumped from flock-core by the Rust `examples/dump_*.rs`.

Note: GPU byte-match gates run under the zorch venv via `PYTHONPATH`, NOT under
hermetic Bazel (the jax/zkx CUDA wheels + the clmad cubin are not hermetic — the
same reason sp1-zorch's GPU checks are `verify_*` py_binary runnables, not
hermetic `py_test`s). See README "Run the gates".
"""

module(
    name = "flock_zorch",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")

# zorch is not published on a Bazel registry; it is vendored as a git submodule at
# third_party/zorch (see .gitmodules), pinned via local_path_override so the bazel
# build and the non-hermetic PYTHONPATH gate path use the IDENTICAL commit — bump
# both at once by moving the submodule. The pin is the flock-byte-fiat-shamir branch
# (byte-SHA256 transcript + FieldOps seam flock needs); keep requirements.in in
# lockstep with it. To dev against another zorch checkout, override in .bazelrc.user
# (gitignored):  common --override_module=zorch=/abs/path/to/your/zorch
bazel_dep(name = "zorch", version = "0.0.0")
local_path_override(
    module_name = "zorch",
    path = "third_party/zorch",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # jax / jaxlib / zkx-cuda-pjrt are published on the Fractalyze index.
    extra_pip_args = ["--extra-index-url=https://fractalyze.github.io/pypi/simple/"],
    hub_name = "flock_zorch_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip, "flock_zorch_pip")
