load("@flock_zorch_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "flock_zorch",
    srcs = glob(
        ["flock_zorch/**/*.py"],
        exclude = ["flock_zorch/**/testing/**"],
    ),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch:byte_transcript",
        "@zorch//zorch:prove",
        "@zorch//zorch:round",
        "@zorch//zorch:sha256_field_transcript",
        "@zorch//zorch/sumcheck",
        "@zorch//zorch/coding:additive_reed_solomon",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:byte_hash",
        "@zorch//zorch/hash:sha256",
        "@zorch//zorch/pcs:fold",
        "@zorch//zorch/pcs:ring_switch",
        "@zorch//zorch/pcs/basefold",
        "@zorch//zorch/pcs/ligerito",
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_library(
    name = "test_support",
    srcs = [
        "flock_zorch/testing/__init__.py",
        "flock_zorch/testing/_util.py",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        ":flock_zorch",
        requirement("frx"),
        requirement("numpy"),
    ],
)

# Non-bazel gates (heavy hash circuits + commit GPU); everything else defaults in.
_HEAVY = [
    "commit",
    "zorch_ligerito_driver",
    "keccak",
    "keccak_ligerito",
    "keccak_chain",
    "keccak3_ligerito",
    "sha2",
    "sha2_ligerito",
    "blake3",
    "blake3_ligerito",
]

[
    py_test(
        name = _f.rpartition("/")[2][:-len(".py")],
        size = "medium",  # slowest gate ~64s (ligerito)
        srcs = [_f],
        data = ["//artifacts:goldens"],
        deps = [
            ":flock_zorch",
            ":test_support",
        ],
    )
    for _f in glob(
        ["flock_zorch/**/testing/*_oracle_test.py"],
        exclude = ["flock_zorch/**/testing/%s_oracle_test.py" % _h for _h in _HEAVY],
    )
]

# Pure-host unit test (no golden): the octopus->per-query-path expander that
# feeds the BaseFold verifier's zorch verify_openings reuse.
py_test(
    name = "merkle_openings_test",
    size = "small",
    srcs = ["flock_zorch/hash/testing/merkle_openings_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
    ],
)

# Pure-host unit test (no golden): the lincheck circuit seam Protocol —
# asserts every circuit `lincheck.prove(circuit=)` accepts conforms structurally.
py_test(
    name = "lincheck_circuit_protocol_test",
    size = "small",
    srcs = ["flock_zorch/lincheck/testing/lincheck_circuit_protocol_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
    ],
)
