load("@flock_zorch_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "flock_zorch",
    srcs = glob(
        ["flock_zorch/**/*.py"],
        exclude = ["flock_zorch/**/testing/**"],
    ),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch:byte_transcript",
        "@zorch//zorch:prove",
        "@zorch//zorch:round",
        "@zorch//zorch:sha256_field_transcript",
        "@zorch//zorch/sumcheck",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:byte_hash",
        "@zorch//zorch/hash:sha256",
        "@zorch//zorch/pcs:fold",
        "@zorch//zorch/pcs:ring_switch",
        "@zorch//zorch/pcs/ligerito",
        "@zorch//zorch/poly",
        "@zorch//zorch/utils:binary_field",
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_library(
    name = "test_support",
    # Glob, not a list: every shared testing helper must land here or the
    # py_tests fail at import, and an explicit list makes that easy to forget.
    srcs = glob([
        "flock_zorch/testing/__init__.py",
        "flock_zorch/testing/_*.py",
    ]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        ":flock_zorch",
        requirement("frx"),
        requirement("numpy"),
    ],
)

# The one flock byte-match gate CPU CI can run. The proof-level gates (identity
# e2e + hash circuits under flock_zorch/testing/) need a GPU and run on the venv;
# flock's fused prove has no registered Ligerito config below m=22, so a small-m
# e2e CPU gate is not dumpable — this full-LigeritoProof gate anchors CI instead.
py_test(
    name = "ligerito_oracle_test",
    size = "medium",  # ~64s on CPU
    srcs = ["flock_zorch/pcs/testing/ligerito_oracle_test.py"],
    data = ["//artifacts:goldens"],
    deps = [
        ":flock_zorch",
        ":test_support",
    ],
)

# No golden: FlockTranscript/FlockChoreography framing lockstep vs the Challenger
# surface + a zorch-driver Ligerito round trip over the GHASH code, all-CPU.
py_test(
    name = "zorch_ligerito_fs_test",
    size = "medium",
    srcs = ["flock_zorch/pcs/testing/zorch_ligerito_fs_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
    ],
)

# Pure-host unit test (no golden): the octopus->per-query-path expander that
# feeds the BaseFold verifier's zorch verify_openings reuse.
py_test(
    name = "merkle_openings_test",
    size = "small",
    srcs = ["flock_zorch/hash/testing/merkle_openings_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
    ],
)

# Pure-host unit test (no golden): the lincheck circuit seam Protocol —
# asserts every circuit `lincheck.prove(circuit=)` accepts conforms structurally.
py_test(
    name = "lincheck_circuit_protocol_test",
    size = "small",
    srcs = ["flock_zorch/lincheck/testing/lincheck_circuit_protocol_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
    ],
)

# Pure-host unit test (no golden): the witness packers round-trip against the
# layouts their frx consumers document (_unpack_bits, partial_fold_packed_z).
py_test(
    name = "pack_test",
    size = "small",
    srcs = ["flock_zorch/pcs/testing/pack_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
    ],
)

# No golden: `CscCircuit.fold_alpha_batched` (device seg-scan) vs a naive host
# XOR-scatter reference — the non-identity A₀/B₀ structure coverage.
py_test(
    name = "csc_fold_test",
    size = "small",
    srcs = ["flock_zorch/lincheck/testing/csc_fold_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
        requirement("absl-py"),
    ],
)

# No golden: prove_packed → verify round-trip for the zerocheck verifier (accept +
# claim reconstruction + tamper rejection). Software-mul, so it runs on CPU.
py_test(
    name = "zerocheck_verify_test",
    # medium like lincheck_verify_test: ~35s locally but a loaded CI runner has
    # hit small's 60s cap (61.3s timeout on an otherwise-green branch).
    size = "medium",
    srcs = ["flock_zorch/zerocheck/testing/zerocheck_verify_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
        requirement("absl-py"),
    ],
)

# No golden: prove zerocheck+lincheck → verify both, claim reconstruction + tamper
# rejection for the lincheck verifier. Software-mul, so it runs on CPU.
py_test(
    name = "lincheck_verify_test",
    size = "medium",
    srcs = ["flock_zorch/lincheck/testing/lincheck_verify_test.py"],
    deps = [
        ":flock_zorch",
        ":test_support",
        requirement("absl-py"),
    ],
)
